<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="product"
            type="com.advanced.petclothesshop.data.PetClothes" />
        <variable
            name="viewModel"
            type="com.advanced.petclothesshop.ui.clothes_detail.ClothesDetailViewModel" />
        <variable
            name="clothesDetailsFragment"
            type="com.advanced.petclothesshop.ui.clothes_detail.ClothesDetailFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="26dp"
        tools:context=".ui.clothes_detail.ClothesDetailFragment">

        <ImageView
            android:id="@+id/image_pet_hand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pet_hand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#DBE5F7" />

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:onClick="@{() -> clothesDetailsFragment.back()}"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_buy"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_buy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26sp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/products"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_buy"
            app:layout_constraintEnd_toStartOf="@id/ic_buy"
            app:layout_constraintStart_toEndOf="@id/ic_back"
            app:layout_constraintTop_toTopOf="@id/ic_buy" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/image_product"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_dog"
            app:layout_constraintTop_toBottomOf="@id/ic_back"
            app:riv_corner_radius="30dp" />

        <TextView
            android:id="@+id/text_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@{product.name}"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/text_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_product" />

        <TextView
            android:id="@+id/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/background_button_blue"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:text="@string/_100_000_vnd"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_product" />

        <TextView
            android:id="@+id/text_title_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/rate"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_product_name" />

        <LinearLayout
            android:id="@+id/linear_ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/text_title_rate"
            app:layout_constraintStart_toEndOf="@id/text_title_rate"
            app:layout_constraintTop_toTopOf="@id/text_title_rate">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_star"/>

            <TextView
                android:id="@+id/text_rating_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:text="@{product.rating + @string/_5}"
                android:textColor="@color/black"
                android:textSize="14sp"/>


        </LinearLayout>

        <TextView
            android:id="@+id/text_title_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/size"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title_rate" />

        <LinearLayout
            android:id="@+id/linear_size_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/text_title_size"
            app:layout_constraintStart_toEndOf="@id/text_title_size"
            app:layout_constraintTop_toTopOf="@id/text_title_size">

            <TextView
                android:id="@+id/item_size_s"
                android:layout_width="33dp"
                android:layout_height="26dp"
                android:background="@drawable/background_option_yellow"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/s"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_size_m"
                android:layout_width="33dp"
                android:layout_height="26dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/background_button_outline_blue"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/m"
                android:textColor="@color/thirty_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_size_l"
                android:layout_width="33dp"
                android:layout_height="26dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/background_button_outline_blue"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/l"
                android:textColor="@color/thirty_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_size_xl"
                android:layout_width="33dp"
                android:layout_height="26dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/background_button_outline_blue"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/xl"
                android:textColor="@color/thirty_text"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/description"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title_size" />

        <TextView
            android:id="@+id/text_product_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:text="@{product.description}"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/button_add_to_cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title_description" />

        <TextView
            android:id="@+id/button_add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_yellow"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>