<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="welcomeFragment"
            type="com.advanced.petclothesshop.ui.welcome.WelcomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        tools:context=".ui.welcome.WelcomeFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pet_hand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_black"
            android:gravity="center"
            android:text="@string/choose_dress"
            android:textColor="@color/white"
            android:textSize="41sp"
            app:layout_constraintBottom_toTopOf="@id/text_welcome_content" />

        <TextView
            android:id="@+id/text_welcome_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/welcome_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/text_let_explore"
            tools:layout_editor_absoluteX="60dp" />

        <TextView
            android:id="@+id/text_let_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/background_button_welcome"
            android:fontFamily="@font/poppins_bold"
            android:onClick="@{() -> welcomeFragment.goToHome()}"
            android:paddingHorizontal="25dp"
            android:paddingVertical="12dp"
            android:text="@string/let_s_explore"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/image_dog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/image_dog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_dog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>